--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <p>First Commits</p>
     <p>First Commits</p>
     <p>First Commits</p>
+    <p>Fit Commits</p>
     <p>First Commits</p>
-    <p>First Commits</p>
-    <p>First Commits</p>
-    <p>First Commits</p>
+    <p>Firsts</p>
+    <p>Firs</p>
 </body>
 </html>
